[package]
name = "lincol"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "Provides a JSON Pointer lookup of line/column information within JSON and YAML content"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"

[dev-dependencies]
structopt = "0.3"
