[package]
name = "lincolns"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "A JSON Pointer index for line/column information within JSON and YAML content"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
log = "0.4"

[dev-dependencies]
structopt = "0.3"
